--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="images/rain logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+
+
 
 </head>
 <body>
@@ -15,7 +21,7 @@
 
         <div class="nav-links" id="navLinks">
             <a href="#home" class="homebtn">Home</a>
-            <a href="#news">About me</a>
+            <a href="#about" class="about">About me</a>
 
             <div class="dropdown">
             <button class="dropbtn">Projects
@@ -49,12 +55,65 @@
         </a>
     </nav>
 
-
-
-
     <!-- hero -->
+     <div class="hero-wrapper">
+        <div class="hero">
+            <h1 class="portfolio">Portfolio</h1>
+            <h1 class="portfolio">Portfolio</h1>
+            <h1 class="portfolio">Portfolio</h1>
+            <h1 class="portfolio">Portfolio</h1>
+            <img src="images/hero.jpg" alt="blurred photo" class="hero-img">
+        </div>
+     </div>
+
     <!-- introduction -->
+
+    <div class="intro">
+        <div class="text">
+            <h2>Hello, <br>  I'm Yagmur! </h2>
+            <p>Lorem ipsum dolor sit amet. Ut enim facilis qui molestiae similique eos dolores nisi quo ullam provident cum saepe consequatur non sunt natus est minus dolor. Ab commodi magni aut soluta aliquam sit maiores officia. Est accusamus voluptate qui facilis iste est voluptate magnam qui consectetur ducimus. Est ullam reprehenderit ea aspernatur sint vel internos quae est voluptate pariatur.</p>
+            <button class="learnBTN">Learn more about me</button>
+        </div>
+        <div class="me">
+            <img src="images/me.png" alt="me">
+            <p class="age">27th December 2002</p>
+            <p class="land">Turkish</p>
+            <div class="contact">
+                <h4>Contact me!</h4>
+                <p>Helmond, Netherlands</p>
+                <p>yagmur.karabulut@live.nl</p>
+                <p>06 82974023</p>
+            </div>
+        </div>
+    </div>
     <!-- projects -->
+    <section class="project-carousel">
+        <h1>Projects</h1>
+        <h1>Projects</h1>
+        <h1>Projects</h1>
+            <div class="carousel">
+                <div class="pinkStar"><img src="images/pink stars.png" alt="stars"></div>
+            <div class="thumbnail">
+                <a href=""><img src="images/dreamprj.png" alt="Project 1"></a>
+            </div>
+
+            <div class="pinkStar"><img src="images/pink stars.png" alt="stars"></div>
+            <div class="thumbnail">
+                <a href=""><img src="images/dreamprj.png" alt="Project 1"></a>
+            </div>
+
+            <div class="pinkStar"><img src="images/pink stars.png" alt="stars"></div>
+            <div class="thumbnail">
+                <a href=""><img src="images/dreamprj.png" alt="Project 1"></a>
+            </div>
+
+            <div class="pinkStar"><img src="images/pink stars.png" alt="stars"></div>
+            <div class="thumbnail">
+                <a href=""><img src="images/dreamprj.png" alt="Project 1"></a>
+            </div>         
+            </div>
+      </section>
+
     <!-- learning outcomes -->
 <script src="nav.js"></script>
 </body>
