--- a/index.html
+++ b/index.html
@@ -115,6 +115,38 @@
       </section>
 
     <!-- learning outcomes -->
+
+    <section class="learning-outcomes">
+        <h1>Learning Outcomes</h1>
+        <div class="outcomes-container">
+            <div class="outcome" data-hover="Conceptualize, design, and develop interactive media products">
+                <span class="default-text">LO1</span>
+                <div class="star star1"><img src="images/black star.png" alt="black star"></div>
+                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+            </div>
+            <div class="outcome" data-hover="Transferable production">
+                <span class="default-text">LO2</span>
+                <div class="star star1"> <img src="images/black star.png" alt="black star"></div>
+                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+            </div>
+            <div class="outcome" data-hover="Creative iterations">
+                <span class="default-text">LO3</span>
+                <div class="star star1"><img src="images/black star.png" alt="black star"></div>
+                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+            </div>
+            <div class="outcome" data-hover="Professional standards">
+                <span class="default-text">LO4</span>
+                <div class="star star1"><img src="images/black star.png" alt="black star"></div>
+                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+            </div>
+            <div class="outcome" data-hover="Personal leadership">
+                <span class="default-text">LO5</span>
+                <div class="star star1"><img src="images/black star.png" alt="black star"></div>
+                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+            </div>    
+        </div>
+        
+    </section>
 <script src="nav.js"></script>
 </body>
 </html>
