--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#home"><img src="images/rain logo.png" alt="logo" class="logo"></a>
 
         <div class="nav-links" id="navLinks">
-            <a href="#home" class="homebtn">Home</a>
+            <a href="index.html" class="homebtn">Home</a>
             <a href="#about" class="about">About me</a>
 
             <div class="dropdown">
@@ -29,7 +29,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
                 <div class="dropdown-content">
-                    <a href="#">LOOP</a>
+                    <a href="loop.html">LOOP</a>
                     <a href="#">Friends with Benefits</a>
                     <a href="#">Development challenges</a>
                     <a href="#">Portfolio</a>
@@ -166,6 +166,14 @@
         </div>
         
     </section>
+
+    <!-- footer -->
+
+    <div class="footer">
+        <p>© 2025 Yagmur portfolio. All rights reserved.</p>
+    </div>
+
+    
 <script src="nav.js"></script>
 </body>
 </html>
