friends w benefits start

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </button>
                 <div class="dropdown-content">
                     <a href="loop.html">LOOP</a>
-                    <a href="#">Friends with Benefits</a>
+                    <a href="friends.html">Friends with Benefits</a>
                     <a href="#">Development challenges</a>
                     <a href="#">Portfolio</a>
                     <a href="#">Vision Installatie</a>
@@ -173,7 +173,7 @@
         <p>© 2025 Yagmur portfolio. All rights reserved.</p>
     </div>
 
-    
+
 <script src="nav.js"></script>
 </body>
 </html>
