--- a/loop.html
+++ b/loop.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/rain logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="loop.css">
 </head>
 <body>
     <!-- navbar -->
@@ -28,8 +28,8 @@
                 <i class="fa fa-caret-down"></i>
             </button>
                 <div class="dropdown-content">
-                    <a href="#">LOOP</a>
-                    <a href="#">Friends with Benefits</a>
+                    <a href="loop.html">LOOP</a>
+                    <a href="friends.html">Friends with Benefits</a>
                     <a href="#">Development challenges</a>
                     <a href="#">Portfolio</a>
                     <a href="#">Vision Installatie</a>
