--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                <a href="#">Interactive media</a>
+                <a href="lo1.html">Interactive media</a>
                 <a href="#">Development</a>
                 <a href="#">Iterative design</a>
                 <a href="#">Professional standard</a>
