--- a/friends.html
+++ b/friends.html
@@ -42,10 +42,10 @@
                 </button>
                 <div class="dropdown-content">
                 <a href="lo1.html">Interactive media</a>
-                <a href="#">Development</a>
-                <a href="#">Iterative design</a>
-                <a href="#">Professional standard</a>
-                <a href="#">Personal leadership</a>
+                <a href="lo2.html">Development</a>
+                <a href="lo3.html">Iterative design</a>
+                <a href="lo4.html">Professional standard</a>
+                <a href="lo5.html">Personal leadership</a>
                 </div>
             </div>
         </div>
