--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 </button>
                 <div class="dropdown-content">
                 <a href="lo1.html">Interactive media</a>
-                <a href="#">Development</a>
-                <a href="#">Iterative design</a>
-                <a href="#">Professional standard</a>
-                <a href="#">Personal leadership</a>
+                <a href="lo2.html">Development</a>
+                <a href="lo3.html">Iterative design</a>
+                <a href="lo4.html">Professional standard</a>
+                <a href="lo5.html">Personal leadership</a>
                 </div>
             </div>
         </div>
@@ -138,31 +138,41 @@
     <section class="learning-outcomes">
         <h1>Learning Outcomes</h1>
         <div class="outcomes-container">
-            <div class="outcome" data-hover="Conceptualize, design, and develop interactive media products">
-                <span class="default-text">LO1</span>
-                <div class="star star1"><img src="images/black star.png" alt="black star"></div>
-                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
-            </div>
-            <div class="outcome" data-hover="Transferable production">
-                <span class="default-text">LO2</span>
-                <div class="star star1"> <img src="images/black star.png" alt="black star"></div>
-                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
-            </div>
-            <div class="outcome" data-hover="Creative iterations">
-                <span class="default-text">LO3</span>
-                <div class="star star1"><img src="images/black star.png" alt="black star"></div>
-                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
-            </div>
-            <div class="outcome" data-hover="Professional standards">
-                <span class="default-text">LO4</span>
-                <div class="star star1"><img src="images/black star.png" alt="black star"></div>
-                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
-            </div>
-            <div class="outcome" data-hover="Personal leadership">
-                <span class="default-text">LO5</span>
-                <div class="star star1"><img src="images/black star.png" alt="black star"></div>
-                <div class="star star2"><img src="images/black star.png" alt="black star"></div>
-            </div>    
+            <a href="lo1.html">
+                <div class="outcome" data-hover="Conceptualize, design, and develop interactive media products">
+                    <span class="default-text">LO1</span>
+                    <div class="star star1"><img src="images/black star.png" alt="black star"></div>
+                    <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+                </div>
+            </a>
+            <a href="lo2.html">
+                <div class="outcome" data-hover="Transferable production">
+                    <span class="default-text">LO2</span>
+                    <div class="star star1"> <img src="images/black star.png" alt="black star"></div>
+                    <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+                </div>
+            </a>
+            <a href="lo3.html">
+                <div class="outcome" data-hover="Creative iterations">
+                    <span class="default-text">LO3</span>
+                    <div class="star star1"><img src="images/black star.png" alt="black star"></div>
+                    <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+                </div>
+            </a>
+            <a href="lo4.html">
+                <div class="outcome" data-hover="Professional standards">
+                    <span class="default-text">LO4</span>
+                    <div class="star star1"><img src="images/black star.png" alt="black star"></div>
+                    <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+                </div>
+            </a>
+            <a href="lo5.html">
+                <div class="outcome" data-hover="Personal leadership">
+                    <span class="default-text">LO5</span>
+                    <div class="star star1"><img src="images/black star.png" alt="black star"></div>
+                    <div class="star star2"><img src="images/black star.png" alt="black star"></div>
+                </div>    
+            </a>
         </div>
         
     </section>
