--- a/lo5.html
+++ b/lo5.html
@@ -58,25 +58,21 @@
 
     <!-- --intro-- -->
     <section class="inleiding">
-        <h1 class="LO">Learning outcome 1 </h1>
-        <h1 class="disc">Conceptualize, design, and develop interactive media products.</h1>
-        <p>You create engaging concepts and translate them into interactive validated media products by applying user-centered design principles, visual design techniques and by exploring emerging technologies.</p>
+        <h1 class="LO">Learning outcome 5 </h1>
+        <h1 class="disc">Personal leadership</h1>
+        <p> You are aware of your strengths and pitfalls, both in the field of ICT and in your personal development. You take actions in line with your core values to promote your personal growth and learning attitude.</p>
     </section>
     <div class="divider"></div>
 
     <section class="content">
         <h2 class="title">Loop - Media Agency</h2>
         <div class="proof">
-            <h4 class="sub-title">Name choice</h4>
-            <p>I came up with the name Loop. In high school I had an assignment to create a logo for a hacker. Back then I made a logo with a magnifying glass, in dutch that is called a loep. But for a moment I thought it was written as loop so I suggested it. Loop also has the meaning of looping in code or a rope. We found it fitting and went for it. Afterwards I also wrote down some core values, our mission and origin story, which we refined further in the project.</p>
+            <h4 class="sub-title">Animation</h4>
+            <p>I had previously made some simple animations with procreate. That is how I already knew the basics. However, I had never used Adobe Animate, that is why I watched a tutorial first.</p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Style scapes</h4>
-            <p>I made a style scape in Adobe Illustrator. For my style scape I used soft, but cheerful colors. I tried making it even more playful by adding shapes and squiggles. After finding inspiration for the logo, I kind of recreated it with a different font. I also made an animation with Adobe Animate. This was my first time using the program so I looked up some tutorials. This animation helps a lot with the readability. </p>
-        </div>
-        <div class="proof">
-            <h4 class="sub-title">Poster</h4>
-            <p>To catch the attention of potential stakeholders I made an eye catching poster. For this I used multiple programs like InDesign, Illustrator, Photoshop and Figma. I used a lot of different techniques which I learned along the way.</p>
+            <h4 class="sub-title">Feedback</h4>
+            <p>I am always open to feedback. When my teammate gave me the feedback to use more yellow, I immediately took action.</p>
         </div>
         
         <div class="divider2"></div>
@@ -84,24 +80,24 @@
 
         <h2 class="title">Friends with "Benefits"</h2>
         <div class="proof">
-            <h4 class="sub-title">Concept</h4>
-            <p>For this project we changed our concept once completely. At first we had the idea to create an educational news game for younger teenagers. But our stake holder did not seem very enthusiastic about the whole concept. So I did more research on existing games and came up with a guessing game. My initial idea was having cards with 5 statements on it which one player has to rank and the other players have to guess that one players ranking. What started out as an innocent game ended up being a very spicy 18+ party game. </p>
+            <h4 class="sub-title">Printing</h4>
+            <p>We wanted to print out stickers to stick on paper cups to use like shot glasses for the showcase event. I made the design but couldn’t figure out how to make it cut. After a lot of trial and error, my team mate found the issue. It turns out the program is capital sensitive. So everything just had be named properly in order to make it all work. But even if it hadn’t worked, I had already came up with different solutions. I started hand cutting all the stickers so we at least had something to show. We wanted to make a sturdy box, but we did not have enough cardboard in stock, that is why we resorted with a thick paper. I stuck the sticker on the paper and glued another layer of paper to make it even firmer. We left the board as it is on the sticker paper, even though we couldn’t fold it this way, it looked better for the showcase.</p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Techniques</h4>
-            <p>At first we wanted to have 3 levels, casual, mild and spicy. For this I had created a pinwheel to help keep the game exiting. I did this by making a pie slice and duplicating and rotating this until I got a full circle. On the board itself I had also used the 3 colors corresponding to the 3 levels. This way there would be another way of playing the game. Whichever color you land on is the card you pick on the next round. </p>
+            <h4 class="sub-title">My share</h4>
+            <p>I think I am allowed to be very proud with this project because of my share in this group. I came up with the original ranking idea, I made the whole first design, I helped create a marketing strategy with Rick, I was very engaged in making the paper prototypes and during the showcase I was really selling the product. One of the teachers even said I sound like a real sales lady. Everyone who came by said that they would buy the game if it ever came out.</p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Box design</h4>
-            <p>Packaging is an important factor, it’s the first thing anyone sees about a product. Another teammate had already made a styles so I went off of that. I started by doing research to existing games. I wrote out everything that has to be on the box. After making sketches I started designing on illustrator. You can read more about the iterative process in LO 3.</p>
+            <h4 class="sub-title">Errors</h4>
+            <p>I am still very open to feedback, when I got told my design was too minimalistic I immediately took action. When the stakeholder did not like our concept I went onto looking for a new idea. After the workshop about user stories I immediately created our user stories and assigned to people in Trello. All in all I am very pleased with the way I provided my work. </p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Prototypes</h4>
-            <p>I had created the packaging on a box template so it would be easy to print and put together. This way I was also able to make simple mockups. I downloaded free mockups from the internet and added my own design to create a mockup. This helped us visualize the product. Another teammate also made a design after doing even more research. We printed both on a piece of paper and put the boxes together. This way we were able to do AB tests. </p>
+            <h4 class="sub-title">Work</h4>
+            <p>Because we divide the tasks within our group, everyone knows what they have to do. Because of this we tend to work from home quite often. But I realized this does now work for me. When I stay home, I stay in bed or do other things. That is why I choose to go to school and work in a study pod. Being at school keeps me away from distractions. Waking up early and getting all dressed and dolled up helps me stay motivated for school, instead of being in my pajama’s at home.</p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Website</h4>
-            <p>We created a product website for marketing. I made the whole home page. Our final design has a racoon mascot. I suggesting giving the racoon a name, which ended up being Rick. This will help with our marketing. In the FAQ section I added a lot of jokes about Rick. I also had the idea to make merchandise. We created condoms, grinders and shot glasses with a picture of Rick on it. When we presented this to our teacher, we got a lot of laughs and good feedback.</p>
+            <h4 class="sub-title">Showcase</h4>
+            <p>During the showcase event I went around and looked at all the other projects. During all of the other presentations I already thought we were ahead of the rest. Within our group we wanted to be finished 4/5 weeks prior to the end of the semester so we had time for the passion project. I realized that none of the other groups did that. For example, the other boardgame group. They do not have any kind of design for the packaging, they still have to do a lot of testing to improve and more. This also goes for other groups. I get that it is harder for them because their stakeholders are far away. I wrote down tips and tops for four of the projects I visited. Most groups are still in the prototype phase and have not started developing yet.</p>
         </div>
         
 
