LO & project link
I linked all the lo and project pages on the home page

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                     </div>
                     <div class="info-item">
                         <i class="fa-solid fa-phone"></i>
-                        <p>06 82974023</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
 
 
             <p class="age">27th December 2002</p>
-            <p class="land">Turkish</p>
+            <p class="land">Turkish/Dutch</p>
 
             
         </div>
@@ -113,12 +113,12 @@
             <div class="carousel">
                 <div class="pinkStar"><img src="images/pink stars.png" alt="stars"></div>
             <div class="thumbnail">
-                <a href=""><img src="images/dreamprj.png" alt="Project 1"></a>
+                <a href="loop.html"><img src="images/mockup_loop.png" alt="loop"></a>
             </div>
 
             <div class="pinkStar"><img src="images/pink stars.png" alt="stars"></div>
             <div class="thumbnail">
-                <a href=""><img src="images/dreamprj.png" alt="Project 1"></a>
+                <a href="friends.html"><img src="images/mockup_rood.png" alt="friends /w benefits"></a>
             </div>
 
             <div class="pinkStar"><img src="images/pink stars.png" alt="stars"></div>
