--- a/lo5.html
+++ b/lo5.html
@@ -82,14 +82,16 @@
         <div class="proof">
             <h4 class="sub-title">Printing</h4>
             <p>We wanted to print out stickers to stick on paper cups to use like shot glasses for the showcase event. I made the design but couldn’t figure out how to make it cut. After a lot of trial and error, my team mate found the issue. It turns out the program is capital sensitive. So everything just had be named properly in order to make it all work. But even if it hadn’t worked, I had already came up with different solutions. I started hand cutting all the stickers so we at least had something to show. We wanted to make a sturdy box, but we did not have enough cardboard in stock, that is why we resorted with a thick paper. I stuck the sticker on the paper and glued another layer of paper to make it even firmer. We left the board as it is on the sticker paper, even though we couldn’t fold it this way, it looked better for the showcase.</p>
+            <img src="images/printing.jpg" alt="">
         </div>
         <div class="proof">
             <h4 class="sub-title">My share</h4>
             <p>I think I am allowed to be very proud with this project because of my share in this group. I came up with the original ranking idea, I made the whole first design, I helped create a marketing strategy with Rick, I was very engaged in making the paper prototypes and during the showcase I was really selling the product. One of the teachers even said I sound like a real sales lady. Everyone who came by said that they would buy the game if it ever came out.</p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Errors</h4>
+            <h4 class="sub-title">Taking action</h4>
             <p>I am still very open to feedback, when I got told my design was too minimalistic I immediately took action. When the stakeholder did not like our concept I went onto looking for a new idea. After the workshop about user stories I immediately created our user stories and assigned to people in Trello. All in all I am very pleased with the way I provided my work. </p>
+            <img src="images/trello fwb.png" alt="">
         </div>
         <div class="proof">
             <h4 class="sub-title">Work</h4>
@@ -98,27 +100,7 @@
         <div class="proof">
             <h4 class="sub-title">Showcase</h4>
             <p>During the showcase event I went around and looked at all the other projects. During all of the other presentations I already thought we were ahead of the rest. Within our group we wanted to be finished 4/5 weeks prior to the end of the semester so we had time for the passion project. I realized that none of the other groups did that. For example, the other boardgame group. They do not have any kind of design for the packaging, they still have to do a lot of testing to improve and more. This also goes for other groups. I get that it is harder for them because their stakeholders are far away. I wrote down tips and tops for four of the projects I visited. Most groups are still in the prototype phase and have not started developing yet.</p>
-        </div>
-        
-
-        <div class="divider2"></div>
-
-        <h2 class="title">Portfolio</h2>
-        <div class="proof">
-            <h4 class="sub-title">Website</h4>
-            <p>I decided to make my digital portfolio a website. This way it is easier to find everything, keep it updated and I will be able to prove all learning outcomes.  </p>
-        </div>
-        <div class="proof">
-            <h4 class="sub-title">Inspiration</h4>
-            <p>I did research on color combinations and existing portfolios and website layouts. After collecting all of that I made wireframes in Figma. I took inspiration from another Turkish woman’s portfolio website. On her product page she has pictures up top and then proceeds to explain about the project. </p>
-        </div>
-        <div class="proof">
-            <h4 class="sub-title">Prototype</h4>
-            <p>I worked my wireframes out until I got an interactive prototype. My previous portfolio website was very simple and did not fit with my style. This time around I added more character with the colors and shapes. I wanted to explore more techniques so I tried things like moving stars and horizontal scrolls. In LO2 you can read more about this.</p>
-        </div>
-        <div class="proof">
-            <h4 class="sub-title">Internship</h4>
-            <p>I also made another portfolio to send out for internships. I did this in Adobe InDesign. The portfolios for school have a lot of text in them which I think is unnecessary for internships. That is why I tried to keep it as simple as possible. I picked out my 5 best projects I did so far. I made a lot of professional looking mockups which I think ended up looking very good. I did this by downloading mockups and adding my own images and changing the background color so it fits with the project. I think this is way better than just adding a low quality photo taken on my phone.  </p>
+            <img src="images/showcasePaper.jpg" alt="">
         </div>
     </section>
 <!-- footer -->
